--- a/main.tex
+++ b/main.tex
@@ -77,6 +77,7 @@
 \setCJKmonofont[BoldFont=cwTeX Q Hei]{cwTeX Q Ming}
 
 %%%%%%%%%%%%%%%%%font size%%%%%%%%%%%%%%%%%%%
+\renewcommand{\baselinestretch}{1.1}
 %\def\normalsize{\fontsize{10}{15}\selectfont}
 %\def\large{\fontsize{12}{18}\selectfont}
 %\def\Large{\fontsize{14}{21}\selectfont}
@@ -133,6 +134,8 @@
   %\fancyfoot[C]{\footnotesize Page \thepage\ of \pageref{LastPage}}
   %\renewcommand{\headrule}{\rule{\textwidth}{\headrulewidth}}
 %}
+
+\setlist{itemsep=0em, topsep=0.2em}
 
 %%%%%%%%%%%%%%%renew command%%%%%%%%%%%%%%%%%
 % \renewcommand{\contentsname}{Table of Content}
