ADD KML K M L KKKK MMMM LLLL

--- a/fields/week1.tex
+++ b/fields/week1.tex
@@ -95,7 +95,7 @@
   \end{proof}
 \end{prop}
 
-\begin{prop}
+\begin{prop} \label{prop:alg-elements-form-a-field}
   Given $L/K$, define $L^{\text{alg}} \triangleq \{ \alpha \in L \mid \alpha \text{ is algebraic over } K \}$,
   then $L^{\text{alg}}$ is a subfield of $L$.
 
@@ -138,7 +138,7 @@
   \end{proof}
 \end{coro}
 
-\begin{prop}
+\begin{prop} \label{prop:alg-tower-implies-alg}
   If $M/L$ and $L/K$ are algebraic, then $M/K$ is algebraic.
 
   \begin{proof}
