--- a/fields/week4.tex
+++ b/fields/week4.tex
@@ -57,7 +57,7 @@
     \[
       \begin{tikzcd}
         L \arrow[rr, "\sim", "\sigma"'] & & L \\
-        K(\alpha) \arrow[u, 1, hookrightarrow] \arrow[rr, "\sim", "\tau"'] & & K(\beta) \arrow[u, hookrightarrow] \\
+        K(\alpha) \arrow[u, hookrightarrow] \arrow[rr, "\sim", "\tau"'] & & K(\beta) \arrow[u, hookrightarrow] \\
         & K \arrow[ur, hookrightarrow] \arrow[ul, hookrightarrow] &
       \end{tikzcd}
     \]
