--- a/fields/week1.tex
+++ b/fields/week1.tex
@@ -32,7 +32,7 @@
   exists a unique monic irreducible polynomial $m_{\alpha, K}(x) \in K[x]$ of
   minimal degree that satisfied $m_{\alpha, K}(\alpha) = 0$ and for any other
   $f(x) \in K[x]$ such that $f(\alpha) = 0$, we have $m_{\alpha, K} \mid f$.
-  We call $m_{\alpha, K}$ the \emph{minimal polynomial} of $\alpha$ over $K$.
+  We call $m_{\alpha, K}$ the {\bf minimal polynomial} of $\alpha$ over $K$.
 
   \begin{proof}
     %Consider the evaluation map on $\alpha$:
@@ -181,9 +181,9 @@
 \begin{definition}
   Let $R$ be a commutative ring with $1$, and $I$ be an ideal of $R$, then
   \begin{itemize}
-    \item $I$ is called a \emph{maximal ideal}\index{Ideal!maximal ideal} if for any ideal $J$ satisfied
+    \item $I$ is called a {\bf maximal ideal}\index{Ideal!maximal ideal} if for any ideal $J$ satisfied
       $I \subseteq J$ then $J = I \text{ or } J = R$.
-    \item $I$ is called a \emph{prime ideal}\index{Ideal!prime ideal}
+    \item $I$ is called a {\bf prime ideal}\index{Ideal!prime ideal}
       if $I \neq R$ and $ab \in I \implies a \in I \text{ or } b \in I$.
   \end{itemize}
 \end{definition}
