--- a/hw/week1.tex
+++ b/hw/week1.tex
@@ -34,7 +34,7 @@
 \end{exercise}
 
 \begin{exercise}
-  Let $L/K$ be algebraic and $\tua: L \to L$ be a monomorphism fixing $K$.
+  Let $L/K$ be algebraic and $\tau: L \to L$ be a monomorphism fixing $K$.
   Show that $\tau$ is onto. (so $\tau$ is isom.)
 \end{exercise}
 
